# lmi-web-browser

./: pyproject.toml
lmi_web_browser/: __main__.py
